Added a Julia set of the day program

--- a/Manelbrot/Makefile
+++ b/Manelbrot/Makefile
@@ -3,4 +3,5 @@ CFLAGS=-g3 -ggdb
 all:
 	$(CXX) $(CFLAGS) -c -o mandelbrot_work.o mandelbrot.cpp
 	$(CXX) $(CFLAGS) -c -o color.o color.cpp
-	g++ $(CFLAGS) -o mandelbrot main.cpp mandelbrot_work.o color.o -lGL -lglut -lm -lpthread
+	$(CXX) $(CFLAGS) -o mandelbrot main.cpp mandelbrot_work.o color.o -lGL -lglut -lm -lpthread
+	$(CXX) $(CFLAGS) -o julia julia_sets.cpp mandelbrot_work.o color.o -lGL -lglut -lm -lpthread
