Started remaking the object system.

--- a/Manelbrot/.cproject
+++ b/Manelbrot/.cproject
@@ -76,6 +76,14 @@
                         </toolChain>
                         					
                     </folderInfo>
+                    					
+                    <sourceEntries>
+                        						
+                        <entry excluding="New Base" flags="VALUE_WORKSPACE_PATH|RESOLVED" kind="sourcePath" name=""/>
+                        						
+                        <entry flags="VALUE_WORKSPACE_PATH|RESOLVED" kind="sourcePath" name="New Base"/>
+                        					
+                    </sourceEntries>
                     				
                 </configuration>
                 			
