Refactoring research; modified glut stuff

--- a/Cpp Computational Chemistry/Makefile
+++ b/Cpp Computational Chemistry/Makefile
@@ -29,6 +29,20 @@ purge:
 	$(RM) *.exe
 	$(RM) *.dll
 	
+.PHONY: build_libs
+build_libs: $(BASE_SOURCES) $(CHEM_SOURCES) $(CALC_SOURCES) ./Main/main.cpp
+
+.PHONY: rebuild_libs
+rebuild_libs:
+	$(MAKE) -B build_libs
+	
+.PHONY:build_sources
+build_sources: $(SOURCES)
+
+.PHONY:rebuild_sources
+rebuild_sources:
+	$(MAKE) -B build_sources
+	
 calculations$(ARCH_SUFF): $(CALC_OBJECTS)
 	$(AR) -cr $@ $^
 chem$(ARCH_SUFF): $(CHEM_OBJECTS)
@@ -40,7 +54,7 @@ $(SOURCES): $(DEPS)
 	$(CC) $(CFLAGS) -o $(subst .cpp,$(EXEC_SUFF),$@) $@ $(DEPS) $(LDFLAGS) $(DLLS) $(DEFINES) $(INCLUDES)
 
 $(BASE_OBJECTS) $(CHEM_OBJECTS) $(CALC_OBJECTS):
-	$(MAKE) $(subst $(OBJ_SUFF),.cpp,$@)
+	$(CC) $(CFLAGS) -c -o $@ $(subst $(OBJ_SUFF),.cpp,$@) $(DEFINES) $(INCLUDES)
 	
 $(BASE_SOURCES) $(CHEM_SOURCES) $(CALC_SOURCES) ./Main/main.cpp:
 	$(CC) $(CFLAGS) -c -o $(subst .cpp,$(OBJ_SUFF),$@) $@ $(DEFINES) $(INCLUDES)
